--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="autoria">Autor(a): Renata Ingryd Alves de Vasconcelos</string>
     <string name="sobre">Sobre</string>
     <string name="controle_de_pessoas">Controle de pessoas</string>
+    <string name="adicionar">Adicionar</string>
+    <string name="novo_cadastro">Novo Cadastro</string>
 </resources>
