--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,50 +1,48 @@
 <resources>
-    <string name="app_name">Hidratei</string>
-    <string name="nome">Nome</string>
-    <string name="peso">Peso</string>
-    <string name="cadastrar">Cadastrar</string>
-    <string name="nome_completo">Nome Completo</string>
-    <string name="peso_atual">Peso Atual</string>
-    <string name="usuario_cadastrado">Usuário cadastrado</string>
-    <string name="faltou_entrar_com_o_nome">Faltou entrar com o nome!</string>
-    <string name="faltou_colocar_o_peso_atual">Faltou colocar o Peso Atual!</string>
-    <string name="limpar">Limpar</string>
-    <string name="nome_valor">"Nome: "</string>
-    <string name="peso_valor">"Peso: "</string>
-    <string name="peso_deve_ser_um_numero_inteiro">Peso deve ser um número inteiro!</string>
-    <string name="as_entradas_foram_apagadas">As entradas foram apagadas!</string>
-    <string name="sugestao_meta">Sugestão de Meta</string>
-    <string name="nao_quer_sugestao_de_meta">Não quer sugestão de meta!</string>
-    <string name="feminino">Feminino</string>
-    <string name="masculino">Masculino</string>
-    <string name="faltou_preencher_o_genero">faltou preencher o gênero!</string>
-    <string name="genero_usado">"Gênero: "</string>
-    <string name="tipo">Tipo:</string>
-    <string name="textGenero">"Gênero: "</string>
-    <string name="ml">ml</string>
-    <string name="litros">L</string>
-    <string name="faltou_exibir_o_tipo">faltou exibir o tipo!</string>
-    <string name="tipo_valor">"Tipo: "</string>
-    <string name="pessoa_de_nome">Pessoa de nome \"</string>
-    <string name="foi_clicada">\"\n foi clicada!</string>
-    <string name="recebeu_um_click_longo">\"\nRecebeu um click longo</string>
-    <string name="logo_agua">Logo que é um copo de agua</string>
-    <string name="descricao">Aplicativo para controle pessoal de ingestão de água para a disciplina de Desenvolvimento Java Para Dispositivos Móveis, da UTFPR</string>
-    <string name="autoria">Autor(a): <a href = "https://github.com/RenataVasconcelos">Renata Ingryd Alves de Vasconcelos</a> </string>
-    <string name="sobre">Sobre</string>
-    <string name="controle_de_pessoas">Controle de pessoas</string>
-    <string name="adicionar">Adicionar</string>
-    <string name="novo_cadastro">Novo Cadastro</string>
-    <string name="site_utfpr">www.utfpr.edu.br</string>
-    <string name="email_autor"><u>renatavasconcelos@alunos.utfpr.edu.br</u></string>
-    <string name="nenhum_aplicativo_para_abrir_paginas_web">Nenhum aplicativo para abrir páginas web</string>
-    <string name="nenhum_aplicativo_para_enviar_um_email">Nenhum aplicativo para enviar um e-mail</string>
-    <string name="contato_pelo_aplicativo">Contato pelo Aplicativo</string>
-    <string name="editar">Editar</string>
-    <string name="excluir">Excluir</string>
-    <string name="editar_pessoa">Editar Pessoa</string>
-    <string name="sugerir_tipo">Sugerir Tipo</string>
-    <string name="ordenacao">Ordenação</string>
-    <string name="restaurar_padroes">Restaurar Padrões</string>
-    <string name="as_configuracoes_voltaram_para_o_padrao_de_instalacao">As configurações voltaram para o padrão de instalação</string>
+    <string name="site_utfpr" translatable="false">www.utfpr.edu.br</string>
+    <string name="email_autor" translatable="false"><u>renatavasconcelos@alunos.utfpr.edu.br</u></string>
+    <string name="app_name">"Hydrated "</string>
+    <string name="nome">Name</string>
+    <string name="peso">Weight</string>
+    <string name="cadastrar">Register</string>
+    <string name="nome_completo">Full name</string>
+    <string name="peso_atual">Current weight</string>
+    <string name="usuario_cadastrado">"Registered user! "</string>
+    <string name="faltou_entrar_com_o_nome">You forgot to enter your name!</string>
+    <string name="faltou_colocar_o_peso_atual">You forgot to enter the current weight!</string>
+    <string name="limpar">Clear</string>
+    <string name="nome_valor">Name:</string>
+    <string name="peso_valor">"Weight: "</string>
+    <string name="peso_deve_ser_um_numero_inteiro">Weight must be a whole number!</string>
+    <string name="as_entradas_foram_apagadas">Entries have been deleted!</string>
+    <string name="sugestao_meta">Goal Suggestion</string>
+    <string name="nao_quer_sugestao_de_meta">No goal suggestion wanted!</string>
+    <string name="feminino">Feminine</string>
+    <string name="masculino">Masculine</string>
+    <string name="faltou_preencher_o_genero">I forgot to fill in the gender!</string>
+    <string name="genero_usado">Gender:</string>
+    <string name="tipo">Type:</string>
+    <string name="textGenero">Gender:</string>
+    <string name="ml" translatable="false">ml</string>
+    <string name="litros" translatable="false">L</string>
+    <string name="faltou_exibir_o_tipo">The type was missing!</string>
+    <string name="tipo_valor">"Type: "</string>
+    <string name="logo_agua">As soon as it\'s a glass of water</string>
+    <string name="descricao">Application for personal control of water intake for the Java Development for Mobile Devices course at UTFPR</string>
+    <string name="autoria">"Author: <a href="https://github.com/RenataVasconcelos">Renata Ingryd Alves de Vasconcelos</a> "</string>
+    <string name="sobre">About</string>
+    <string name="controle_de_pessoas">People Control</string>
+    <string name="adicionar">Add</string>
+    <string name="novo_cadastro">New Registration</string>
+    <string name="nenhum_aplicativo_para_abrir_paginas_web">No apps to open web pages!</string>
+    <string name="nenhum_aplicativo_para_enviar_um_email">No app to send an email!</string>
+    <string name="contato_pelo_aplicativo">Contact via App</string>
+    <string name="editar">Edit</string>
+    <string name="excluir">Delete</string>
+    <string name="editar_pessoa">Edit Person</string>
+    <string name="sugerir_tipo">Suggest Type</string>
+    <string name="ordenacao">Ordering</string>
+    <string name="restaurar_padroes">Restore Defaults</string>
+    <string name="as_configuracoes_voltaram_para_o_padrao_de_instalacao">Settings reverted to installation default!</string>
+    <string name="peso_deve_ser_maior_que_0">Weight must be greater than 0!</string>
 </resources>
