--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -51,4 +51,7 @@
     <string name="desfazer">Desfazer</string>
     <string name="alteracao_realizada">Alteração dos dados realizada!</string>
     <string name="erro_de_conversao_de_tipos">Erro de consersão de tipo!</string>
+    <string name="erro_ao_tentar_inserir">Erro ao tentar inserir!</string>
+    <string name="erro_ao_tentar_alterar">Erro ao tentar alterar!</string>
+    <string name="erro_ao_tentar_excluir">Erro ao tentar excluir!</string>
 </resources>
