--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,7 @@
     <string name="desfazer">Undo</string>
     <string name="alteracao_realizada">Data update done!</string>
     <string name="erro_de_conversao_de_tipos">Type conversion error!</string>
+    <string name="erro_ao_tentar_inserir">Error trying to insert!</string>
+    <string name="erro_ao_tentar_alterar">Error trying to update!</string>
+    <string name="erro_ao_tentar_excluir">Error trying do delete!</string>
 </resources>
